--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "files": [
     "index.js"
   ],
-  "scripts": {},
+  "scripts": {
+    "test": "echo 'No tests so far' && exit 0"
+  },
   "dependencies": {},
   "devDependencies": {
     "np": "^6.4.0"
