--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "index.js"
   ],
   "scripts": {
-    "test": "echo 'No tests so far' && exit 0"
+    "test": "run-p test:*",
+    "test:lint": "eslint ."
   },
   "dependencies": {},
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
+    "eslint-plugin-import": "^2.22.0",
     "np": "^6.4.0",
+    "npm-run-all": "^4.1.5",
     "typescript": "^3.9.7"
   },
   "keywords": [
