--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "np": "^6.4.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.26.5",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
     "typescript": "^3.9.7"
   },
   "keywords": [
