--- a/.github/workflows/nodeci.yml
+++ b/.github/workflows/nodeci.yml
@@ -28,6 +28,9 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
+      - name: Configure git line-breaks for Windows
+        run: git config --global core.autocrlf false
+        if: matrix.os == 'windows-latest'
       - uses: actions/checkout@v2
       - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v1
