--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
-    "@wessberg/rollup-plugin-ts": "^1.3.2",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-config-airbnb-typescript": "^9.0.0",
-    "eslint-plugin-import": "^2.22.0",
-    "np": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-plugin-import": "^2.24.0",
+    "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.26.5",
+    "rollup": "^2.56.2",
     "rollup-plugin-preserve-shebang": "^1.0.1",
-    "typescript": "^3.9.7"
+    "rollup-plugin-ts": "^1.4.0",
+    "typescript": "^4.3.5"
   },
   "keywords": [
     "camomile",
