--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "dist",
     "index.js"
   ],
+  "engines": {
+    "node": "^12 || ^14 || >=16"
+  },
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
