--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "camomile",
   "version": "0.0.3",
   "description": "The workflow automation toolset",
-  "author": "Nikita Karamov <nick@karamoff.dev>",
   "license": "BSD-3-Clause",
+  "author": "Nikita Karamov <nick@karamoff.dev>",
   "repository": "camomilejs/camomile",
-  "main": "dist/camomile.js",
-  "module": "dist/camomile.mjs",
-  "types": "dist/camomile.d.ts",
-  "bin": {
-    "camomile": "dist/bin/index.js"
-  },
+  "type": "module",
+  "bin": "./dist/bin/camomile",
+  "exports": "./dist/camomile.js",
   "files": [
-    "dist",
-    "index.js"
+    "dist"
   ],
   "engines": {
     "node": "^12 || ^14 || >=16"
@@ -26,6 +22,8 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-typescript": "^8.2.5",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
@@ -35,8 +33,6 @@
     "np": "^7.5.0",
     "npm-run-all": "^4.1.5",
     "rollup": "^2.56.2",
-    "rollup-plugin-preserve-shebang": "^1.0.1",
-    "rollup-plugin-ts": "^1.4.0",
     "typescript": "^4.3.5"
   },
   "keywords": [
