--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-  "name": "camomile",
-  "version": "0.0.3",
-  "description": "The workflow automation toolset",
-  "license": "BSD-3-Clause",
-  "author": "Nikita Karamov <nick@karamoff.dev>",
-  "repository": "camomilejs/camomile",
-  "type": "module",
-  "bin": "./dist/bin/camomile",
-  "exports": "./dist/camomile.js",
-  "files": [
-    "dist"
-  ],
-  "engines": {
-    "node": "^12 || ^14 || >=16"
-  },
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "test": "run-p test:*",
-    "test:lint": "eslint ."
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^20.0.0",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^12.3.1",
-    "eslint-plugin-import": "^2.24.0",
-    "np": "^7.5.0",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.56.2",
-    "typescript": "^4.3.5"
-  },
-  "keywords": [
-    "camomile",
-    "build",
-    "build-system",
-    "build-tool",
-    "automation",
-    "pipeline"
-  ]
+	"name": "camomile",
+	"version": "0.0.3",
+	"description": "The workflow automation toolset",
+	"license": "BSD-3-Clause",
+	"author": "Nikita Karamov <nick@karamoff.dev>",
+	"repository": "camomilejs/camomile",
+	"type": "module",
+	"bin": "./dist/bin/camomile",
+	"exports": "./dist/camomile.js",
+	"files": [
+		"dist"
+	],
+	"engines": {
+		"node": "^12 || ^14 || >=16"
+	},
+	"scripts": {
+		"build": "rollup -c",
+		"dev": "rollup -c -w",
+		"test": "run-p test:*",
+		"test:lint": "eslint ."
+	},
+	"dependencies": {},
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^20.0.0",
+		"@rollup/plugin-typescript": "^8.2.5",
+		"@typescript-eslint/eslint-plugin": "^4.29.2",
+		"@typescript-eslint/parser": "^4.29.2",
+		"eslint": "^7.32.0",
+		"eslint-config-airbnb-base": "^14.2.1",
+		"eslint-config-airbnb-typescript": "^12.3.1",
+		"eslint-plugin-import": "^2.24.0",
+		"np": "^7.5.0",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^2.3.2",
+		"rollup": "^2.56.2",
+		"typescript": "^4.3.5"
+	},
+	"keywords": [
+		"camomile",
+		"build",
+		"build-system",
+		"build-tool",
+		"automation",
+		"pipeline"
+	]
 }
