--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint": "^7.32.0",
 		"eslint-config-airbnb-base": "^14.2.1",
 		"eslint-config-airbnb-typescript": "^12.3.1",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-import": "^2.24.0",
 		"np": "^7.5.0",
 		"npm-run-all": "^4.1.5",
