--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
 		"@typescript-eslint/eslint-plugin": "^4.29.2",
 		"@typescript-eslint/parser": "^4.29.2",
 		"eslint": "^7.32.0",
-		"eslint-config-airbnb-base": "^14.2.1",
-		"eslint-config-airbnb-typescript": "^12.3.1",
 		"eslint-config-prettier": "^8.3.0",
+		"eslint-config-xo": "^0.38.0",
+		"eslint-config-xo-typescript": "^0.44.0",
+		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-import": "^2.24.0",
+		"eslint-plugin-no-use-extend-native": "^0.5.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-promise": "^5.1.0",
+		"eslint-plugin-unicorn": "^35.0.0",
 		"np": "^7.5.0",
 		"npm-run-all": "^4.1.5",
 		"prettier": "^2.3.2",
