--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
 		"node": "^12 || ^14 || >=16"
 	},
 	"scripts": {
-		"build": "rollup -c",
-		"dev": "rollup -c -w",
-		"test": "run-p test:*",
-		"test:eslint": "eslint .",
-		"test:prettier": "prettier --check ."
+		"build": "rollup --config rollup.config.ts --configPlugin typescript",
+		"dev": "rollup --config rollup.config.ts --configPlugin typescript --watch",
+		"lint": "eslint .",
+		"prettier": "prettier --check .",
+		"test": "echo 'No tests yet...'"
 	},
 	"dependencies": {},
 	"devDependencies": {
@@ -38,7 +38,6 @@
 		"eslint-plugin-promise": "^5.1.0",
 		"eslint-plugin-unicorn": "^35.0.0",
 		"np": "^7.5.0",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^2.3.2",
 		"rollup": "^2.56.2",
 		"typescript": "^4.3.5"
