--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,26 @@ on:
       - v*
 
 jobs:
-  build:
+  lint:
+    name: Lint code
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+      - name: Setup Node.js LTS
+        uses: actions/setup-node@v2.4.0
+        with:
+          node-version: lts/*
+          cache: yarn
+      - name: Install dependencies
+        run: yarn
+      - name: Lint (Prettier)
+        run: yarn prettier
+      - name: Lint (ESLint)
+        run: yarn lint
+
+  test:
     name: Run tests on ${{ matrix.os }} with Node.js v${{ matrix.node }}
     runs-on: ${{ matrix.os }}
 
@@ -19,8 +38,8 @@ jobs:
       matrix:
         node:
           - 16.x
-          - 14.x
-          - 12.x
+          - lts/fermium
+          - lts/erbium
         os:
           - ubuntu-latest
           - windows-latest
@@ -30,9 +49,9 @@ jobs:
       - name: Configure git line-breaks for Windows
         run: git config --global core.autocrlf false
         if: matrix.os == 'windows-latest'
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v2.3.4
-      - name: Setup Node.js v${{ matrix.node }}
+      - name: Setup Node.js ${{ matrix.node }}
         uses: actions/setup-node@v2.4.0
         with:
           node-version: ${{ matrix.node }}
